---------------------------------------------------------------------------------------------------
Version: 0.3.2
Date: 28. 05. 2022
  Features:
    - Added big countdown letters.
    - Verify world has an valid arena to prevent this mod accidentally staying active after done playing.
  Changes:
    - All arenas are now covered by radar.
  Bugfixes:
    - Admin players now also have full permissions.
---------------------------------------------------------------------------------------------------
Version: 0.3.2
Date: 28. 05. 2022
  Features:
    - Show messages whe player loses or wins to other players in same lobby.
  Changes:
    - Removed hacky workaround after fix in basegame (100508).
  Bugfixes:
    - Rework mechanism not detecting player losing anymore due to wont-fix vanilla regression (102511).
    - Fix crash when player joins lobby during active game.
    - Fix possible crash in collision when player character is killed. Character is now invincible!
    - Fix one player getting points accidentally when nobody won the round.
---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 04. 11. 2021
  Changes:
    - While playing on your own you'll now get points based on time (not transfered to lobby)
    - Add sound at round end.
  Bugfixes:
    - Now correctly resets state on reset.
    - Can no longer exit car in round start countdown.
    - GUIs don't get stuck when Tips-And-Tricks is open during portal woosh. (Thanks KRS!)
    - Arena will now stop gracefully if last player leaves the server. (Thanks KRS!)
---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 30. 10. 2021
  Features:
    - Improved some graphics.
    - Can now skip splash cutscene.
    - Improved Tips-And-Tricks.
    - Players permissions reduced drastically to minimize bugs and trolss.