@@ -4,6 +4,7 @@ Date: 28. 05. 2022
   Features:
     - Added big countdown letters.
     - Verify world has an valid arena to prevent this mod accidentally staying active after done playing.
+    - Added Tips-and-Tricks to show tanks drive through anything.
   Changes:
     - All arenas are now covered by radar.
   Bugfixes:
